# ml-inspector

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: binary_classification.md  binary_classifier.md  multiclass_classification.md  regression.md
ml_inspector/: __init__.py  _metrics_curves.py  calibration_curves.py  confusion_matrix.py  feature_importance.py  gain_curves.py  learning_curves.py  partial_dependence.py  precision_recall_curves.py  predictions.py  roc_curves.py
ml_inspector/feature_distribution/: classification.py
ml_toolbox/: roc_curve.py
tests/: conftest.py  fixtures.py  test_gain_curves.py  test_precision_recall_curves.py  test_roc_curve.py  test_roc_curves.py
