[project]
name = "ml-toolbox"
version = "0.0.1"
description = "User friendly tools to understand machine learning models"
authors = [
  { name="Olivier Bougeant", email="olivierbougeant@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Bougeant/ml-toolbox"

[project.dependencies]
pandas
plotly
scikit-learn

[project.dev-dependencies]
test = ["pytest"]
lint = ["black", "isort", "flake8"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
